Make sure the text style is not reset when we remove the last character

Just set default document style to the lastly used font

BUG:408441